--- a/index.html
+++ b/index.html
@@ -64,31 +64,31 @@
                       </div> -->
                       <div class="carousel-inner">
                         <div class="carousel-item active"> 
-                          <img src="https://zkmeteor.github.io/Design/assets/banner.png" class="d-block w-100" alt="...">
+                          <img src="./assets/banner.png" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-none d-md-block">
                               <h5>Tainan Art Museum</h5>
                           </div>
                         </div>
                         <div class="carousel-item">
-                          <img src="https://zkmeteor.github.io/Design/assets/banner1.png" class="d-block w-100" alt="...">
+                          <img src="./assets/banner1.png" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-none d-md-block">
                             <h5>Tainan Art Museum</h5>
                           </div>
                         </div>
                         <div class="carousel-item" >
-                          <img src="https://zkmeteor.github.io/Design/assets/banner2.png" class="d-block w-100" alt="...">
+                          <img src="./assets/banner2.png" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-none d-md-block">
                             <h5>Tainan Confucius Temple</h5>
                           </div>
                         </div>
                         <div class="carousel-item" >
-                          <img src="https://zkmeteor.github.io/Design/assets/banner3.png" class="d-block w-100" alt="...">
+                          <img src="./assets/banner3.png" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-none d-md-block">
                             <h5>Tainan Confucius Temple</h5>
                           </div>
                         </div>
                         <div class="carousel-item" >
-                          <img src="https://zkmeteor.github.io/Design/assets/banner4.png" class="d-block w-100" alt="...">
+                          <img src="./assets/banner4.png" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-none d-md-block">
                             <h5>Tainan Confucius Temple</h5>
                           </div>
@@ -133,15 +133,15 @@
           <h3 class="text-center about-title py-2">02 Project</h3>
             <div class="row py-4 d-flex justify-content-around align-items-center">
                 <div class="col-lg-4 col-md-6 col-10 py-2 proj-imgbox">
-                  <a href="https://zkmeteor.github.io/Design/assets/namepost.png">
-                    <img src="https://zkmeteor.github.io/Design/assets/namepost.png" class="w-100" alt="Your Name Post">
+                  <a href="./assets/namepost.png">
+                    <img src="./assets/namepost.png" class="w-100" alt="Your Name Post">
                     <div class="proj-imgboxtitle">
                       <h5 class="py-2 ">Your Name Post</h5>
                     </div>
                   </a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-10 py-2 proj-imgbox">
-                  <a href="https://zkmeteor.github.io/Design/assets/risk.png">
+                  <a href="./assets/risk.png">
                     <img src="/assets/risk.png" class="w-100" alt="Digital Risk Post">
                     <div class="proj-imgboxtitle">
                       <h5 class="py-2 ">Digital Risk Post</h5>
@@ -149,16 +149,16 @@
                   </a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-10 py-2 proj-imgbox">
-                  <a href="https://zkmeteor.github.io/Design/assets/greenhouse.png">
-                    <img src="https://zkmeteor.github.io/Design/assets/greenhouse.png" class="w-100" alt="Green House Post">
+                  <a href="./assets/greenhouse.png">
+                    <img src="./assets/greenhouse.png" class="w-100" alt="Green House Post">
                     <div class="proj-imgboxtitle">
                       <h5 class="py-2 ">Green House Post</h5>
                     </div>
                   </a>
                 </div>
                 <div class="col-lg-3 col-md-6 col-10 py-2 proj-imgbox">
-                  <a href="https://zkmeteor.github.io/Design/assets/dm.png">
-                    <img src="https://zkmeteor.github.io/Design/assets/dm.png" class="w-100" alt="Name Card">
+                  <a href="./assets/dm.png">
+                    <img src="./assets/dm.png" class="w-100" alt="Name Card">
                     <div class="proj-imgboxtitle">
                       <h5 class="py-2 ">Name Card</h5>
                     </div>
