--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-10 py-2 proj-imgbox">
                   <a href="./assets/risk.png">
-                    <img src="/assets/risk.png" class="w-100" alt="Digital Risk Post">
+                    <img src="./assets/risk.png" class="w-100" alt="Digital Risk Post">
                     <div class="proj-imgboxtitle">
                       <h5 class="py-2 ">Digital Risk Post</h5>
                     </div>
