--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="" style="height: 60px;" id="home"></div>
     <!-- top -->
     <div class="top-fixed">
-        <div class="container px-3 top-box d-flex align-items-center ">
+        <div class="container px-3 top-box d-flex align-items-center">
             <div class="row  justify-content-between align-items-center w-100">
                 <div class="col-md-4 top-title">
                   <a href="https://zkmeteor.github.io/Vueindex/#/home" target="_blank">
@@ -51,8 +51,8 @@
 <!-- scollbox -->
     <div class="container-fluid scollbox">
       <!-- banner -->
-      <div class="container-fluid px-md-5">
-          <div class="container-md container-fluid-md banner-box">
+      <div class="container-fluid px-md-5 p-0">
+          <div class="container-md container-fluid-md banner-box p-0">
               <div class="row p-0 m-0">
                   <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-touch="true">
                       <!-- <div class="carousel-indicators">
