--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body class="animate__animated animate__fadeIn">
-    <div class="" style="height: 60px;" id="home"></div>
-    <!-- top -->
+
+<!-- load -->
+<div class="load-box">
+  <div class="">
+    <span class="loader"></span>
+  </div>
+</div>
+
+  <!-- top -->
+  <div class="" style="height: 60px;" id="home"></div>
     <div class="top-fixed">
         <div class="container px-3 top-box d-flex align-items-center">
             <div class="row  justify-content-between align-items-center w-100">
@@ -33,23 +41,23 @@
                 </div>
                 <div class="col-md-4 p-0 d-flex justify-content-around align-items-center top-link">
                     <div class="">
-                        <a href="#home" data-scroll-to>Home</a>
+                        <a href="#home">Home</a>
                     </div>
                     <div class="">
-                        <a href="#about" data-scroll-to>About</a>
+                        <a href="#about">About</a>
                     </div>
                     <div class="">
-                        <a href="#project" data-scroll-to>Project</a>
+                        <a href="#project">Project</a>
                     </div>
                     <div class="">
-                        <a href="#contact" data-scroll-to>contact</a>                
+                        <a href="#contact">Contact</a>                
                     </div>
                 </div>
             </div>
         </div>
     </div>
 <!-- scollbox -->
-    <div class="container-fluid scollbox">
+    <div class="container-fluid"id="scollbox">
       <!-- banner -->
       <div class="container-fluid px-md-5 p-0">
           <div class="container-md container-fluid-md banner-box p-0">
@@ -113,7 +121,7 @@
       <!-- about -->
       <div class="container-fluid" >
         <div class="container about-box">
-          <h3 class="text-center about-title py-2">01 About</h3>
+          <h3 class="text-center about-title pb-5">01 About</h3>
           <div class="row d-flex justify-content-center align-items-center">
               <div class="col-md-6 col-10 py-2">
                 <p style="color: rgb(54, 54, 54);">
@@ -130,9 +138,9 @@
       <!-- project -->
       <div class="container-fluid">
         <div class="container project-box">
-          <h3 class="text-center about-title py-2">02 Project</h3>
+          <h3 class="text-center about-title pb-5">02 Project</h3>
             <div class="row py-4 d-flex justify-content-around align-items-center">
-                <div class="col-lg-4 col-md-6 col-6 py-2 proj-imgbox">
+                <div class="col-lg-3 col-md-4 col-6 py-2 proj-imgbox">
                   <a href="./assets/namepost.png">
                     <img src="./assets/namepost.png" class="w-100" alt="Your Name Post">
                     <div class="proj-imgboxtitle">
@@ -140,7 +148,7 @@
                     </div>
                   </a>
                 </div>
-                <div class="col-lg-4 col-md-6 col-6 py-2 proj-imgbox">
+                <div class="col-lg-3 col-md-4 col-6 py-2 proj-imgbox">
                   <a href="./assets/risk.png">
                     <img src="./assets/risk.png" class="w-100" alt="Digital Risk Post">
                     <div class="proj-imgboxtitle">
@@ -148,7 +156,7 @@
                     </div>
                   </a>
                 </div>
-                <div class="col-lg-4 col-md-6 col-6 py-2 proj-imgbox">
+                <div class="col-lg-3 col-md-4 col-6 py-2 proj-imgbox">
                   <a href="./assets/greenhouse.png">
                     <img src="./assets/greenhouse.png" class="w-100" alt="Green House Post">
                     <div class="proj-imgboxtitle">
@@ -174,7 +182,7 @@
       <!-- contact -->
       <div class="container-fluid">
         <div class="container contact-box">
-          <h3 class="text-center about-title py-2">03 Contact</h3>
+          <h3 class="text-center about-title pb-5">03 Contact</h3>
             <div class="row">
                 <div class="col-12 d-flex flex-column">
                     <p class="text-center color-g py-2">Mail：<a href="mailto:53065306A@gmail.com" class="color-b contact-tel">53065306A@gmail.com</a></p>
@@ -198,13 +206,53 @@
 <!-- scoll -->
 <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.0/dist/locomotive-scroll.min.js"></script>
 <script>
-
     const slowscroll = new LocomotiveScroll({
-        el: document.querySelector('.scollbox'), // 滾動效果的作用範圍，整個網站都要滑順的話，直接設定 “body”
-        smooth: true, //設定為 true ，開啟滾動效果
-        repeat: false, //物件如果有設定 data-scroll 每當物件進入視窗時，就會增加一個 is-inview 的 class，如果 repeat 設定成 true ， 每次物件進入或離開視線範圍內，都會依照狀態改變 class。
-        lerp:.05  // 視窗滾動的平滑感,min:0,max:1
+        el: document.querySelector('#scollbox'), // 滾動效果的作用範圍，整個網站都要滑順的話，直接設定 “body”
+        smooth: true,
+        lerp: 0.05,
+        repeat: true,
     })
-    
+/*     const home = document.querySelector('#home');
+    const about = document.querySelector('#about');
+    const project = document.querySelector('#project');
+    const contact = document.querySelector('#contact');
+
+    slowscroll.scrollTo(home);
+    slowscroll.scrollTo(about);
+    slowscroll.scrollTo(project);
+    slowscroll.scrollTo(contact); */
+
+    document.addEventListener("DOMContentLoaded", function() {
+      var links = document.querySelectorAll('.top-link a');
+
+      links.forEach(function(link) {
+          link.addEventListener('click', function(e) {
+              e.preventDefault(); // 防止點擊連結時瀏覽器跳轉到指定的 URL
+
+              var targetId = this.getAttribute('href').substring(1); // 取得目標 ID
+              var targetElement = document.getElementById(targetId); // 取得目標元素
+
+              if (targetElement) {
+                  var offsetTop = targetElement.offsetTop; // 取得目標元素距離網頁頂部的距離
+
+                  // 使用平滑滾動到目標位置
+                  window.scrollTo({
+                      top: offsetTop,
+                      behavior: 'smooth'
+                  });
+              }
+          });
+      });
+  });
+</script>
+<!-- load -->
+<script>
+setTimeout(() => {
+    document.querySelector('.load-box').style.opacity = '0';
+    document.querySelector('.load-box').style.transition = '0.5s';
+}, 4000);
+setTimeout(() => {
+    document.querySelector('.load-box').style.display = 'none';
+}, 4500);
 </script>
 </html>
