--- a/index.html
+++ b/index.html
@@ -58,10 +58,17 @@
         </div>
     </div>
 <!-- scollbox -->
-    <div class="container-fluid p-0 body" >
+    <div class="container-fluid p-0" >
+      <div class="container" data-scroll-id="#home"
+          style="height: 100px;">
+          <div class="col-6"
+          style="border-right: 1px solid #a5a4a4; height: 70px;"></div>
+          <div class="col-6"></div>
+        </div>
       <!-- banner -->
       <div class="container-fluid px-md-5 p-0">
           <div class="container-md container-fluid-md banner-box p-0">
+            <h3 class="text-center about-title" data-scroll data-scroll-speed="1" >00 My Photo</h3>
               <div class="row p-0 m-0">
                   <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-touch="true">
                       <!-- <div class="carousel-indicators">
@@ -141,6 +148,16 @@
         <div class="container ">
           <h3 class="text-center about-title pb-2" data-scroll data-scroll-speed="-1">02 Project</h3>
             <div class="row py-5 d-flex justify-content-around align-items-center project-box">
+              <div class="col-md-4 col-6 p-2 proj-imgbox" data-scroll data-scroll-speed="1">
+                <div class="">
+                  <a href="./assets/ERP.png">
+                    <img src="./assets/ERP.png" class="w-100" alt="ERP Post">
+                    <div class="proj-imgboxtitle">
+                      <h5 class="">ERP Post</h5>
+                    </div>
+                  </a>
+                </div>
+              </div>
                 <div class="col-md-4 col-6 p-2 proj-imgbox" data-scroll data-scroll-speed="1">
                   <div class="">
                     <a href="./assets/namepost.png">
