--- a/index.html
+++ b/index.html
@@ -80,31 +80,31 @@
                       </div> -->
                       <div class="carousel-inner">
                         <div class="carousel-item active"> 
-                          <img src="./assets/banner.png" class="d-block w-100" alt="...">
+                          <img src="./assets/banner.jpg" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-none d-md-block">
                               <h5>Tainan Art Museum</h5>
                           </div>
                         </div>
                         <div class="carousel-item">
-                          <img src="./assets/banner1.png" class="d-block w-100" alt="...">
+                          <img src="./assets/banner1.jpg" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-none d-md-block">
                             <h5>Tainan Art Museum</h5>
                           </div>
                         </div>
                         <div class="carousel-item" >
-                          <img src="./assets/banner2.png" class="d-block w-100" alt="...">
+                          <img src="./assets/banner2.jpg" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-none d-md-block">
                             <h5>Tainan Confucius Temple</h5>
                           </div>
                         </div>
                         <div class="carousel-item" >
-                          <img src="./assets/banner3.png" class="d-block w-100" alt="...">
+                          <img src="./assets/banner3.jpg" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-none d-md-block">
                             <h5>Tainan Confucius Temple</h5>
                           </div>
                         </div>
                         <div class="carousel-item" >
-                          <img src="./assets/banner4.png" class="d-block w-100" alt="...">
+                          <img src="./assets/banner4.jpg" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-none d-md-block">
                             <h5>Tainan Confucius Temple</h5>
                           </div>
@@ -150,8 +150,8 @@
             <div class="row py-5 d-flex justify-content-around align-items-center project-box">
               <div class="col-md-4 col-6 p-2 proj-imgbox" data-scroll data-scroll-speed="1">
                 <div class="">
-                  <a href="./assets/ERP.png">
-                    <img src="./assets/ERP.png" class="w-100" alt="ERP Post">
+                  <a href="./assets/ERP.jpg">
+                    <img src="./assets/ERP.jpg" class="w-100" alt="ERP Post">
                     <div class="proj-imgboxtitle">
                       <h5 class="">ERP Post</h5>
                     </div>
@@ -160,8 +160,8 @@
               </div>
                 <div class="col-md-4 col-6 p-2 proj-imgbox" data-scroll data-scroll-speed="1">
                   <div class="">
-                    <a href="./assets/namepost.png">
-                      <img src="./assets/namepost.png" class="w-100" alt="Your Name Post">
+                    <a href="./assets/namepost.jpg">
+                      <img src="./assets/namepost.jpg" class="w-100" alt="Your Name Post">
                       <div class="proj-imgboxtitle">
                         <h5 class="">Your Name Post</h5>
                       </div>
@@ -170,8 +170,8 @@
                 </div>
                 <div class="col-md-4 col-6 p-2" data-scroll data-scroll-speed="1">
                   <div class="proj-imgbox">
-                    <a href="./assets/risk.png">
-                      <img src="./assets/risk.png" class="w-100" alt="Digital Risk Post">
+                    <a href="./assets/risk.jpg">
+                      <img src="./assets/risk.jpg" class="w-100" alt="Digital Risk Post">
                       <div class="proj-imgboxtitle">
                         <h5 class="">Digital Risk Post</h5>
                       </div>
@@ -180,8 +180,8 @@
                 </div>
                 <div class="col-md-4 col-6 p-2" data-scroll data-scroll-speed="1">
                   <div class="proj-imgbox">
-                    <a href="./assets/greenhouse.png">
-                      <img src="./assets/greenhouse.png" class="w-100" alt="Green House Post">
+                    <a href="./assets/greenhouse.jpg">
+                      <img src="./assets/greenhouse.jpg" class="w-100" alt="Green House Post">
                       <div class="proj-imgboxtitle">
                         <h5 class="">Green House Post</h5>
                       </div>
@@ -190,8 +190,8 @@
                 </div>
                 <div class="col-md-6 col-5 p-2" data-scroll data-scroll-speed="1">
                   <div class="proj-imgbox">
-                    <a href="./assets/dm.png">
-                      <img src="./assets/dm.png" class="w-100" alt="Name Card">
+                    <a href="./assets/dm.jpg">
+                      <img src="./assets/dm.jpg" class="w-100" alt="Name Card">
                       <div class="proj-imgboxtitle">
                         <h5 class=" ">Name Card</h5>
                       </div>
