--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </div>
               </div>
           </div>
-          <div class="container"id="about" data-scroll-id="#about"
+          <div class="container mt-5 mb-5"id="about" data-scroll-id="#about"
             style="height: 100px;">
             <div class="col-6"
             style="border-right: 1px solid #a5a4a4; height: 70px;"></div>
@@ -135,8 +135,8 @@
                 <p class="py-3" style="color: rgb(54, 54, 54);" data-scroll data-scroll-speed="1">
                   &emsp;&emsp;Hello! I'm Meteor, a web designer located in Tainan City. I specialize in web design and crafting visual identities.
                 </p>
-                <p class="py-3" style="color: rgb(54, 54, 54);" data-scroll data-scroll-speed="1">
-                  &emsp;&emsp;
+                <p class="py-3" style="color: rgb(54, 54, 54);" data-scroll data-scroll-speed="2">
+                  &emsp;&emsp;Normally, I like to read websites written by other people, learn their designs, and add my own practice websites in my attempts, hoping to learn more skills in the future.
                 </p>
               </div>
           </div>
@@ -209,13 +209,15 @@
         </div>
       </div>
       <!-- contact -->
-      <div class="container-fluid">
+      <div class="container-fluid pb-5">
         <div class="container contact-box">
           <h3 class="text-center about-title pb-5">03 Contact</h3>
             <div class="row">
-                <div class="col-12 d-flex flex-column">
+                <div class="col-12 d-flex flex-column py-4">
                     <p class="text-center color-g py-2">Mail：<a href="mailto:53065306A@gmail.com" class="color-b contact-tel">53065306A@gmail.com</a></p>
                     <p class="text-center color-g py-2">Tel：<a href="tel:0912176038" class="color-b contact-tel">0912176038</a></p>
+                    <p class="text-center color-g py-2">Discord： <span class="color-b">Meteor#3795</span></p>
+                    <p class="text-center color-g py-2">Line：<span class="color-b">zanki_meteor</span></p>
                 </div>
             </div>
           </div>
