--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
                     </div>
               </div>
           </div>
+          <div class="downbox top-link">
+            <a href="#about" data-scroll data-scroll-call="#about">
+              <div class="down-arrow"></div>
+              <div class="down-arrow"></div>
+            </a>
+          </div>
           <div class="container mt-5 mb-5"id="about" data-scroll-id="#about"
             style="height: 100px;">
             <div class="col-6"
