--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
                 </div>
                 <div class="col-md-6 col-12 p-0 d-flex justify-content-around align-items-center top-link">
                     <div class="">
-                        <a href="#home" data-scroll data-scroll-call="#home">Home</a>
+                        <a href="#home" class="" data-scroll data-scroll-call="#home">Home</a>
                     </div>
                     <div class="">
-                        <a href="#about" data-scroll data-scroll-call="#about">About</a>
+                        <a href="#about" class="" data-scroll data-scroll-call="#about">About</a>
                     </div>
                     <div class="">
-                        <a href="#project" data-scroll data-scroll-call="#project">Project</a>
+                        <a href="#project" class="" data-scroll data-scroll-call="#project">Project</a>
                     </div>
                     <div class="">
-                        <a href="#contact" data-scroll data-scroll-call="#contact">Contact</a>                
+                        <a href="#contact" class="" data-scroll data-scroll-call="#contact">Contact</a>                
                     </div>
                 </div>
             </div>
@@ -59,89 +59,91 @@
     </div>
 <!-- scollbox -->
     <div class="container-fluid p-0" >
-      <div class="container" data-scroll-id="#home"
+      <div class="container-fluid p-0" data-scroll-id="#home"
           style="height: 100px;">
           <div class="col-6"
           style="border-right: 1px solid #a5a4a4; height: 70px;"></div>
           <div class="col-6"></div>
-        </div>
-      <!-- banner -->
-      <div class="container-fluid px-md-5 p-0">
-          <div class="container-md container-fluid-md banner-box p-0">
-            <h3 class="text-center about-title" data-scroll data-scroll-speed="1" >00 My Photo</h3>
-              <div class="row p-0 m-0">
-                  <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-touch="true">
-                      <!-- <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-                      </div> -->
-                      <div class="carousel-inner">
-                        <div class="carousel-item active"> 
-                          <img src="./assets/banner.jpg" class="d-block w-100" alt="...">
-                          <div class="carousel-caption d-none d-md-block">
-                              <h5>Tainan Art Museum</h5>
-                          </div>
-                        </div>
-                        <div class="carousel-item">
-                          <img src="./assets/banner1.jpg" class="d-block w-100" alt="...">
-                          <div class="carousel-caption d-none d-md-block">
-                            <h5>Tainan Art Museum</h5>
-                          </div>
-                        </div>
-                        <div class="carousel-item" >
-                          <img src="./assets/banner2.jpg" class="d-block w-100" alt="...">
-                          <div class="carousel-caption d-none d-md-block">
-                            <h5>Tainan Confucius Temple</h5>
-                          </div>
-                        </div>
-                        <div class="carousel-item" >
-                          <img src="./assets/banner3.jpg" class="d-block w-100" alt="...">
-                          <div class="carousel-caption d-none d-md-block">
-                            <h5>Tainan Confucius Temple</h5>
-                          </div>
-                        </div>
-                        <div class="carousel-item" >
-                          <img src="./assets/banner4.jpg" class="d-block w-100" alt="...">
-                          <div class="carousel-caption d-none d-md-block">
-                            <h5>Tainan Confucius Temple</h5>
-                          </div>
-                        </div>
-                      </div>
-                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                        <span class="">Pre</span>
-                      </button>
-                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                        <span class="">Nex</span>
-                      </button>
-                    </div>
-              </div>
-          </div>
-          <div class="downbox top-link">
-            <a href="#about" data-scroll data-scroll-call="#about">
-              <div class="down-arrow"></div>
-              <div class="down-arrow"></div>
-            </a>
-          </div>
-          <div class="container mt-5 mb-5"id="about" data-scroll-id="#about"
-            style="height: 100px;">
-            <div class="col-6"
-            style="border-right: 1px solid #a5a4a4; height: 70px;"></div>
-            <div class="col-6"></div>
-          </div>
       </div>
+      <!-- banner -->
+        <div class="container-fluid px-md-5 p-0">
+            <div class="container-md container-fluid-md banner-box p-0">
+              <h3 class="text-center about-title" data-scroll data-scroll-speed="1" >00 My Photo</h3>
+                <div class="row p-0 m-0">
+                    <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-touch="true">
+                        <!-- <div class="carousel-indicators">
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                        </div> -->
+                        <div class="carousel-inner">
+                          <div class="carousel-item active"> 
+                            <img src="./assets/banner.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Tainan Art Museum</h5>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="./assets/banner1.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                              <h5>Tainan Art Museum</h5>
+                            </div>
+                          </div>
+                          <div class="carousel-item" >
+                            <img src="./assets/banner2.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                              <h5>Tainan Confucius Temple</h5>
+                            </div>
+                          </div>
+                          <div class="carousel-item" >
+                            <img src="./assets/banner3.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                              <h5>Tainan Confucius Temple</h5>
+                            </div>
+                          </div>
+                          <div class="carousel-item" >
+                            <img src="./assets/banner4.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                              <h5>Tainan Confucius Temple</h5>
+                            </div>
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
+                </div>
+            </div>
+            <div class="downbox top-link">
+              <a href="#about" data-scroll data-scroll-call="#about">
+                <div class="down-arrow"></div>
+                <div class="down-arrow"></div>
+              </a>
+            </div>
+            <div class="container mt-5 mb-5"id="about" data-scroll-id="#about"
+              style="height: 100px;">
+              <div class="col-6"
+              style="border-right: 1px solid #a5a4a4; height: 70px;"></div>
+              <div class="col-6"></div>
+            </div>
+        </div>
       <!-- about -->
       <div class="container-fluid" >
         <div class="container about-box">
-          <h3 class="text-center about-title pb-5" data-scroll data-scroll-speed="-1" >01 About</h3>
+          <h3 class="text-center about-title pb-5 " data-scroll data-scroll-speed="-1" >01 About</h3>
           <div class="row d-flex justify-content-center align-items-center py-5">
               <div class="col-md-6 col-10 ">
-                <p class="py-3" style="color: rgb(54, 54, 54);" data-scroll data-scroll-speed="1">
+                <p class="py-3 " style="color: rgb(54, 54, 54);" data-scroll data-scroll-speed="1">
                   &emsp;&emsp;Hello! I'm Meteor, a web designer located in Tainan City. I specialize in web design and crafting visual identities.
                 </p>
-                <p class="py-3" style="color: rgb(54, 54, 54);" data-scroll data-scroll-speed="2">
+                <p class="py-3 " style="color: rgb(54, 54, 54);" data-scroll data-scroll-speed="2">
                   &emsp;&emsp;Normally, I like to read websites written by other people, learn their designs, and add my own practice websites in my attempts, hoping to learn more skills in the future.
                 </p>
               </div>
@@ -153,7 +155,7 @@
         </div>
       </div>
       <!-- project -->
-      <div class="container-fluid">
+      <div class="container-fluid ">
         <div class="container ">
           <h3 class="text-center about-title pb-2" data-scroll data-scroll-speed="-1">02 Project</h3>
             <div class="row py-5 d-flex justify-content-around align-items-center project-box">
@@ -247,7 +249,7 @@
       </div>
     </div>
   </div>
-
+<div class="changeclassend"></div>
 <!-- all -->
 <script>
 year = new Date().getFullYear();
@@ -276,8 +278,38 @@ document.querySelector('.footer').innerHTML = `<p class="text-center m-0 py-2 co
       });
 
 </script>
+<!-- addclss -->
+<script>
+/* const topfixed = document.querySelector('.top-fixed');
+const changeclassend = document.querySelector('.changeclassend');
+const changeclass = document.querySelectorAll('.changeclass');
+
+const observer = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+
+
+          topfixed.classList.remove('changed')
+          changeclass.forEach( i =>{
+            i.classList.remove('changed');
+          })
+        } else {
+
+
+          topfixed.classList.add('changed')
+          changeclass.forEach( i =>{
+            i.classList.add('changed');
+          })
+        }
+    });
+});
+
+observer.observe(changeclassend); */
+
+</script>
 <!-- load -->
 <script>
+window.addEventListener('load', function() {
   setTimeout(() => {
       document.querySelector('.load-box').style.opacity = '0';
       document.querySelector('.load-box').style.transition = '0.5s';
@@ -285,6 +317,7 @@ document.querySelector('.footer').innerHTML = `<p class="text-center m-0 py-2 co
   setTimeout(() => {
       document.querySelector('.load-box').style.display = 'none';
   }, 4500);
+});
 </script>
   <!-- img -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js" integrity="sha512-7KzSt4AJ9bLchXCRllnyYUDjfhO2IFEWSa+a5/3kPGQbr+swRTorHQfyADAhSlVHCs1bpFdB1447ZRzFyiiXsg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
