--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ observer.observe(changeclassend); */
 </script>
 <!-- load -->
 <script>
-window.addEventListener('load', function() {
+/* window.addEventListener('load', function() {
   setTimeout(() => {
       document.querySelector('.load-box').style.opacity = '0';
       document.querySelector('.load-box').style.transition = '0.5s';
@@ -317,7 +317,16 @@ window.addEventListener('load', function() {
   setTimeout(() => {
       document.querySelector('.load-box').style.display = 'none';
   }, 4500);
-});
+}); */
+window.onload = function() {
+    setTimeout(() => {
+        document.querySelector('.load-box').style.opacity = '0';
+        document.querySelector('.load-box').style.transition = '0.5s';
+    }, 4000);
+    setTimeout(() => {
+        document.querySelector('.load-box').style.display = 'none';
+    }, 4500);
+};
 </script>
   <!-- img -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js" integrity="sha512-7KzSt4AJ9bLchXCRllnyYUDjfhO2IFEWSa+a5/3kPGQbr+swRTorHQfyADAhSlVHCs1bpFdB1447ZRzFyiiXsg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
