--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="col-md-6 col-12 p-0 d-flex justify-content-around align-items-center top-link">
                     <div class="">
-                        <a href="#home" class="" data-scroll data-scroll-call="#home">Home</a>
+                        <a href="#home" class="" data-scroll data-scroll-call="#home">Top</a>
                     </div>
                     <div class="">
                         <a href="#about" class="" data-scroll data-scroll-call="#about">About</a>
@@ -243,7 +243,7 @@
     </div>
     <!-- foot -->
     <div class="container-fluid p-0">
-      <div class="row justify-content-center align-items-center" style="background: white;">
+      <div class="row justify-content-center align-items-center m-0" style="background: white;">
         <div class="col-12 py-2 footer">
         </div>
       </div>
